--- a/index.html
+++ b/index.html
@@ -5,7 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 17</title>
 </head>
+<style>
+    *{
+        margin: 0px;
+        padding: 0px;
+        box-sizing: border-box;
+    }
+    .navbar{
+        width: 100%;
+        height: 45px;
+        background-color:#090979;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .navbar a {
+        font-family:Georgia, 'Times New Roman', Times, serif;
+        font-weight: bold;
+        color: white;
+    }
+    .btn{
+        height: 20px;
+        width: 70px;
+        border: none;
+        background-color: #7CB9E8;
+        border-radius: 4px;
+        font-weight: 700px;
+    }
+</style>
 <body>
-    
+    <nav class="navbar">
+       <a>HOME</a>
+       <a>DOWNLOAD</a>
+       <a>YOUR MOVIES</a>
+       <button class="btn">log in</button>
+       <button class="btn">Sign up</button>
+    </nav>
 </body>
 </html>
