--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         margin: 0px;
         padding: 0px;
         box-sizing: border-box;
+        background-color:#B9D9EB;
     }
     .navbar{
         width: 100%;
@@ -23,6 +24,7 @@
         font-family:Georgia, 'Times New Roman', Times, serif;
         font-weight: bold;
         color: white;
+        background-color: transparent;
     }
     .btn{
         height: 20px;
@@ -31,6 +33,24 @@
         background-color: #7CB9E8;
         border-radius: 4px;
         font-weight: 700px;
+    }
+    .main{
+        display: flex;
+        margin: 15px 30px;    }
+    .card{
+      margin: 5px 15px;
+      height: 500px;
+      width: 400px;
+      display: flex;
+      justify-content: center;
+      background-color: #F0F8FF;
+      border-radius: 10px;
+    }
+    .img1{
+      height: 400px;
+      border-radius: 5px;
+      text-align: center;
+      margin-top: 20px;
     }
 </style>
 <body>
@@ -41,5 +61,16 @@
        <button class="btn">log in</button>
        <button class="btn">Sign up</button>
     </nav>
+    <div class="main">
+        <div class="card">
+          <img class="img1"  src="./fRWjtotRdR8OXrp6jHHL4OUWMqh.jpg"/>
+        </div>
+        <div class="card">
+            <img class="img1"  src=".//images (3).jpeg"/>
+          </div>
+          <div class="card">
+            <img class="img1"  src="./images.jpeg"/>
+          </div>
+    </div>
 </body>
 </html>
