--- a/index.html
+++ b/index.html
@@ -39,36 +39,76 @@
         margin: 15px 30px;    }
     .card{
       margin: 5px 15px;
-      height: 500px;
-      width: 400px;
+      height: 600px;
+      width: 350px;
       display: flex;
-      justify-content: center;
+     align-items: center;
       background-color: #F0F8FF;
       border-radius: 10px;
       position: relative;
+     flex-direction: column;
+     text-align: center;
     }
     .img1{
-      height: 400px;
-      border-radius: 5px;
-      text-align: center;
+      height: 380px;
+      width: 290px;
+      border-radius: 15px;
+      align-items: center;
       margin-top: 20px;
     }
     .bgicon{
         position: absolute;
         background-color: rgb(239, 81, 53);
-        height: 70px;
-        width: 70px;
-        top: 76%;
+        height: 50px;
+        width: 50px;
+        top: 62%;
         right: 50px;
         border-radius: 50%;
-       
+
     }
     .icon{
-        height: 40px;
+        height: 28px;
         position: absolute;
         background-color: transparent;
-        top: 22%;
-        right: 11px;
+        top: 25%;
+        right: 8px;
+        
+    }
+    .smallimg{
+        position: absolute;
+        top: 62%;
+        left: 40px;
+        height: 100px;
+        border-radius: 5px;
+    }
+    .movie-name{
+        background-color: transparent;
+        font-family: Verdana;
+        text-align: center;
+        margin-top: 10px;
+        margin-left:30px;
+    }
+    .namebg{
+        background-color: transparent;
+        display: flex;
+        flex-direction: column;
+    }
+    .rate-icon{
+        height: 90px;
+        width: 120;
+        background-color: transparent;
+        padding: 2px;
+    }
+    .infomation{
+        display: flex;
+        background-color: #F0F8FF;
+    }
+    .last{
+        margin: 3px 5px;
+        background-color:#F0F8FF;
+    }
+    .last p{
+        background-color: #F0F8FF;
     }
 </style>
 <body>
@@ -85,6 +125,31 @@
           <div class="bgicon">
             <img  class="icon" src="./play-button-arrowhead.png"/>
           </div>
+          <img class="smallimg" src="./fRWjtotRdR8OXrp6jHHL4OUWMqh.jpg"/>
+          <div class="namebg">
+             <p class="movie-name">Rehnaa Hai Terre <br>Dil Mein</p>
+             <img class="rate-icon" src="rating.png"/>
+
+          </div>
+          <div class="infomation">
+            <div class="last">
+                <p>Length</p>
+                <p>03:45</p>
+            </div>
+            <div class="last">
+                <p>Lang</p>
+                <p>Hindi</p>
+            </div>
+            <div class="last">
+                <p>Rating</p>
+                <p>4.5</p>
+            </div>
+            <div class="last">
+                <p>Review</p>
+                <p>45+</p>
+            </div>
+
+        </div>
         </div>
 
         <div class="card">
@@ -92,12 +157,61 @@
             <div class="bgicon">
                 <img  class="icon" src="./play-button-arrowhead.png"/>
               </div>
+              <img class="smallimg" src="./images (3).jpeg"/>
+              <div class="namebg">
+                  <p class="movie-name">Love Aaj<br> Kal</p>
+                  <img class="rate-icon" src="rating.png"/>
+             </div>
+             <div class="infomation">
+                <div class="last">
+                    <p>Length</p>
+                    <p>03:45</p>
+                </div>
+                <div class="last">
+                    <p>Lang</p>
+                    <p>Hindi</p>
+                </div>
+                <div class="last">
+                    <p>Rating</p>
+                    <p>4.5</p>
+                </div>
+                <div class="last">
+                    <p>Review</p>
+                    <p>45+</p>
+                </div class="last">
+
+            </div>
           </div>
+
           <div class="card">
             <img class="img1"  src="./images.jpeg"/>
             <div class="bgicon">
                 <img  class="icon" src="./play-button-arrowhead.png"/>
-              </div>
+            </div>
+            <img class="smallimg" src="./images.jpeg"/>
+            <div class="namebg">
+                <p class="movie-name">Sanam Teri  <br> Kasam</p>
+                <img class="rate-icon" src="rating.png"/>
+            </div>
+            <div class="infomation">
+                <div class="last">
+                    <p>Length</p>
+                    <p>03:45</p>
+                </div>
+                <div class="last">
+                    <p>Lang</p>
+                    <p>Hindi</p>
+                </div>
+                <div class="last">
+                    <p>Rating</p>
+                    <p>4.5</p>
+                </div>
+                <div class="last">
+                    <p>Review</p>
+                    <p>45+</p>
+                </div>
+
+            </div>
           </div>
     </div>
 </body>
